add bootstrap done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ delete.button.label=Delete
 cancel.button.label=Cancel
 save.button.label=Save
 update.button.label=Update
-add.button.label=Add
+add.strategy.button.label=Add Strategy
 
 strategy.list.page.title=Strategy List
 strategy.list.head.title=Strategy List
