--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -1,3 +1,32 @@
-home.page.title=\u9996\u9801
-user.page.title=\u9996\u9801
-
+admin.page.title=\u9996\u9801
+ 
+button.label.update=\u4FEE\u6539
+button.label.add.strategy=\u65B0\u589E
+button.label.save=\u5132\u5B58
+button.label.delete=\u522A\u9664
+button.label.cancel=\u53D6\u6D88
+ 
+button.action.stage=\u89C0\u770B
+button.action.save=\u5132\u5B58
+button.action.delete=\u522A\u9664
+button.action.cancel=\u53D6\u6D88
+ 
+strategy.list.page.title=\u7B56\u7565 \u5217\u8868
+strategy.list.head.title=\u7B56\u7565 \u5217\u8868
+strategy.list.body.title=\u7B56\u7565 \u5217\u8868
+strategy.list.table.title=\u7B56\u7565 \u5217\u8868
+strategy.list.id.label=Id
+strategy.list.type.label=\u7B56\u7565 \u5F62\u614B
+strategy.list.name.label=\u7B56\u7565 \u540D\u7A31
+strategy.list.actions.label=\u884C\u52D5
+strategy.list.add.title=\u65B0\u589E \u7B56\u7565
+ 
+strategy.delete.page.title=\u522A\u9664 \u7B56\u7565
+strategy.delete.head.title=\u522A\u9664 \u7B56\u7565
+strategy.delete.body.title=\u522A\u9664 \u7B56\u7565
+strategy.delete.form.title=\u522A\u9664 \u7B56\u7565
+ 
+strategy.edit.page.title=\u7DE8\u8F2F \u7B56\u7565
+strategy.edit.head.title=\u7DE8\u8F2F \u7B56\u7565
+strategy.edit.body.title=\u7DE8\u8F2F \u7B56\u7565
+strategy.edit.form.title=\u7DE8\u8F2F \u7B56\u7565
