--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 admin.page.title=Admin Home Page
+
+login.page.title=Login Page
  
 button.label.update=Update
 button.label.add.strategy=Add Strategy
