Use Role to authorize

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 admin.page.title=Admin Home Page
+trader.page.tile=Trader Home Page
+user.page.title=User Home Page
 
 login.page.title=Login Page
  
