--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -1,4 +1,6 @@
-admin.page.title=\u9996\u9801
+admin.page.title=\u7BA1\u7406\u54E1\u9996\u9801
+trader.page.title=\u4EA4\u6613\u54E1\u9996\u9801
+user.page.title=\u4F7F\u7528\u8005\u9996\u9801
  
 button.label.update=\u4FEE\u6539
 button.label.add.strategy=\u65B0\u589E
