add a custom access denied(403) page.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,8 @@ trader.page.tile=Trader Home Page
 user.page.title=User Home Page
 
 login.page.title=Login Page
+error.page.title=403 - Not Authorized
+error.page.description=You are not authorized to access this page
  
 button.label.update=Update
 button.label.add.strategy=Add Strategy
