--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -1,6 +1,10 @@
 admin.page.title=\u7BA1\u7406\u54E1\u9996\u9801
 trader.page.title=\u4EA4\u6613\u54E1\u9996\u9801
-user.page.title=\u4F7F\u7528\u8005\u9996\u9801
+user.page.title=\u4F7F\u7528\u8005\u9996\u980
+
+login.page.title=\u767B\u5165\u9801\u9762
+error.page.title=403 - \u672A\u6388\u6B0A
+error.page.description=\u60A8\u672A\u88AB\u6388\u6B0A\u5141\u8A31\u9032\u5165\u6B64\u9801\u9762
  
 button.label.update=\u4FEE\u6539
 button.label.add.strategy=\u65B0\u589E
